# oscilloscope-rendering

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md
circuits/: CustomSymbols.bak  CustomSymbols.kicad_sym
circuits/dac-base-board/: dac-base-board.kicad_pcb  dac-base-board.kicad_prl  dac-base-board.kicad_pro  dac-base-board.kicad_sch  fp-info-cache
circuits/dac-base-board/gerber/: dac-base-board-B_Cu.gbl  dac-base-board-B_Mask.gbs  dac-base-board-B_Paste.gbp  dac-base-board-B_Silkscreen.gbo  dac-base-board-Edge_Cuts.gm1  dac-base-board-F_Cu.gtl  dac-base-board-F_Mask.gts  dac-base-board-F_Paste.gtp  dac-base-board-F_Silkscreen.gto  dac-base-board-NPTH.drl  dac-base-board-PTH.drl
circuits/dac-pcb/: dac-pcb.kicad_pcb  dac-pcb.kicad_prl  dac-pcb.kicad_pro  dac-pcb.kicad_sch
circuits/dac-pcb/plots/: dac-pcb-B_Cu.gbl  dac-pcb-B_Mask.gbs  dac-pcb-B_Paste.gbp  dac-pcb-B_Silkscreen.gbo  dac-pcb-Edge_Cuts.gm1  dac-pcb-F_Cu.gtl  dac-pcb-F_Mask.gts  dac-pcb-F_Paste.gtp  dac-pcb-F_Silkscreen.gto  dac-pcb-NPTH.drl  dac-pcb-PTH.drl
circuits/rpi-pico-wiring/: rpi-pico-wiring.kicad_prl  rpi-pico-wiring.kicad_pro  rpi-pico-wiring.kicad_sch  sym-lib-table
disthub/: .eslintrc.json  package.json  tsconfig.json
disthub/src/: test.ts
docs/: C_naming_conventions.md  FlowChart-Jobs.drawio  HardwareSystemDiagram.drawio  Instructions.md  rp2040_openocd_help.md
docs/drawio/DEBRICATED_FlowChart-JobMangement/: DEBRICATED_FlowChart-JobMangement.drawio
docs/drawio/DataFlow_RP2040/: DataFlow_RP2040.drawio
docs/drawio/HardwareSystemDiagram/: HardwareSystemDiagram.drawio
firmware/: CMakeLists.txt  FreeRTOSConfig.h  Jenkinsfile  README.md  example_auto_set_url.cmake  freeRTOS.cmake  pico_sdk_import.cmake  rpiPico.code-profile
firmware/docker/: Dockerfile  build_docs.sh  build_firmware.sh
firmware/docs/: Doxyfile  drawio
firmware/include/: dac.h  dacConfig.h  gen.h  includeGlobals.h  instructionFormat.h  tusb_config.h  usb.h
firmware/include/config/: FreeRTOSConfig.h  dacConfig.h  tusb_config.h
firmware/include/usb/: usb.h  usb_common.h  usb_descriptors.h  usb_globals.h
firmware/scripts/: build.sh  build_and_flash.sh  flash.exp  flash_direct.sh  launch_openocd.sh  launch_serial_monitor.sh  reset.exp
firmware/src/: main.c
firmware/src/dac/: dac.h  dac.pio  dacConfig.h  driver.c  gen.c  globals.c  include_globals.h  interface.c  pregen.c  processing.c
firmware/src/test/freeRTOS/: CMakeLists.txt  main.c
firmware/src/test/usb/: tusb_config.h  usb_descriptors.c
firmware/src/usb/: callbacks.c  common.c  def_descriptor.c  handlers.c  lowlevel.c  usb_descriptors.c
firmware/src/usb_test/: CMakeLists.txt  main.c
tools/: GainCalculator.ipynb  fixedPoint_testing.ipynb  voltageDivider.ipynb
usb-interface/: .gitignore  Cargo.toml
usb-interface/src/: gen.rs  lib.rs  main.rs  usb.rs
usb-interface/src/tests/: basic.rs
